--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,14 +46,19 @@ dependencies {
     implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT"
     implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'ru.bullyboo.animation:text_counter:1.0.2'
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$LIFECYCLE_VERSION"
+    //implementation 'com.android.support:support-v4:27.1.1'
+    //implementation 'com.android.support:support-v4:27.1.1'
     kapt "com.android.databinding:compiler:3.1.4"
     implementation project(':supportcompactlibrary')
     implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
-    api 'com.ryanjeffreybrooks:indefinitepagerindicator:1.0.9'
+    //api 'com.ryanjeffreybrooks:indefinitepagerindicator:1.0.9'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'com.github.warkiz.tickseekbar:tickseekbar:0.1.3'
+    implementation 'com.daasuu:CountAnimationTextView:0.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
