--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,12 @@ dependencies {
     implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
     //api 'com.ryanjeffreybrooks:indefinitepagerindicator:1.0.9'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.0.4'
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'com.github.warkiz.tickseekbar:tickseekbar:0.1.3'
     implementation 'com.daasuu:CountAnimationTextView:0.1.1'
 
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
