--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.github.AnyChart:AnyChart-Android:1.0.4'
 
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     //implementation 'com.daasuu:CountAnimationTextView:0.1.1'
 
     implementation 'com.android.support:support-v4:28.0.0'
