--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
+
     //implementation 'com.daasuu:CountAnimationTextView:0.1.1'
 
     implementation 'com.android.support:support-v4:28.0.0'
