--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.android:flexbox:1.0.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
     //implementation 'com.daasuu:CountAnimationTextView:0.1.1'
 
