--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.mjn1369:prettydialog:1.0.4'
     //Retrofit
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
