1: Sign Up OTP Verify Screen and its validation done. 2: PAN Verify Screen and its validation done. 3: PAN OTP Verify Screen and its validation done.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppWindowBGThem"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name=".module.otp.OtpVerificationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppWindowBGThem"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
 
     </application>
 
