--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation 'com.google.android:flexbox:1.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.drawers:SpinnerDatePicker:1.0.6'
-
+    implementation 'com.github.yalantis:ucrop:2.2.2'
 
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
