--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.github.drawers:SpinnerDatePicker:1.0.6'
     implementation 'com.github.yalantis:ucrop:2.2.2'
     implementation 'com.github.simonebortolin:FlowLayoutManager:1.5'
+    implementation 'me.relex:circleindicator:1.2.2'
 
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
