--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.mjn1369:prettydialog:1.0.4'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
     //Retrofit
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
