--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.github.simonebortolin:FlowLayoutManager:1.5'
     implementation 'me.relex:circleindicator:1.2.2'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     //implementation 'com.android.support:support-v4:28.0.0'
