--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'org.jsoup:jsoup:1.11.3'
+
 
     //implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
