--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature
         android:name="android.hardware.camera"
@@ -88,6 +89,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppWindowBGThem"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name=".module.intro.IntroductionActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppWindowBGThem"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
