--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+
 }
 
 dependencies {
@@ -78,6 +82,7 @@ dependencies {
     implementation 'me.relex:circleindicator:1.2.2'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.otaliastudios:zoomlayout:1.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'org.jsoup:jsoup:1.11.3'
 
