SOAP api implemented

--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api "com.squareup.retrofit2:converter-scalars:2.3.0"
+    api 'com.squareup.retrofit2:converter-simplexml:2.5.0'
+
     //OkHttp Interceptor
     api 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     //RxJava
