--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.williamww:silky-signature:0.1.0'
-
+    implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
