--- a/supportcompactlibrary/build.gradle
+++ b/supportcompactlibrary/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     //RxJava
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     api 'io.reactivex.rxjava2:rxjava:2.1.3'
+
+    api 'com.google.android.gms:play-services-auth:15.0.1'
 }
 
 kapt {
