--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         tools:ignore="GoogleAppIndexingWarning,HardcodedDebugMode"
         tools:replace="android:allowBackup,android:name"
         tools:targetApi="m">
+        <activity android:name=".module.webviewActivity.WebviewActivity"></activity>
         <activity
             android:name=".module.splash.SplashActivity"
             android:screenOrientation="portrait">
