--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,12 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
+    /**Firebase Dependency*/
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-messaging:17.4.0'
+
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -98,3 +104,4 @@ dependencies {
         exclude module: 'support-v4'
     }
 }
+apply plugin: 'com.google.gms.google-services'
