--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,8 +103,15 @@
         <activity
             android:name=".module.ekyc.SignatureActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".module.webviewActivity.WebviewActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".module.webviewActivity.WebviewActivity"
+            android:screenOrientation="portrait" />
+
+        <service android:name=".fcm.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
