--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$SUPPORT_LIB_VERSION"
     implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT"
     implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT"
     implementation 'ru.bullyboo.animation:text_counter:1.0.2'
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$LIFECYCLE_VERSION"
@@ -91,8 +91,8 @@ dependencies {
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
     /**Firebase Dependency*/
-    implementation 'com.google.firebase:firebase-core:16.0.7'
-    implementation 'com.google.firebase:firebase-messaging:17.4.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.facebook.android:facebook-login:4.41.0'
 
 
