--- a/supportcompactlibrary/src/main/AndroidManifest.xml
+++ b/supportcompactlibrary/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.supportcompact">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,6 +14,7 @@
     <application
         android:name=".CoreApp"
         android:allowBackup="false"
+        tools:replace="android:allowBackup"
         android:supportsRtl="true">
 
         <provider
