--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.fabric'
+
 android {
 
     compileSdkVersion COMPILE_SDK_VERSION
@@ -94,6 +96,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.facebook.android:facebook-login:4.41.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 
 
     testImplementation 'junit:junit:4.12'
