1: Integrate the API to update or get the user device token. 2: Implement the firebase push notification. 3: Show/hide the update signature option in the profile screen.

--- a/supportcompactlibrary/src/main/AndroidManifest.xml
+++ b/supportcompactlibrary/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
     <application
         android:name=".CoreApp"
         android:allowBackup="false"
-        tools:replace="android:allowBackup"
-        android:supportsRtl="true">
+        android:largeHeap="true"
+        android:supportsRtl="true"
+        tools:replace="android:allowBackup">
 
         <provider
             android:name="android.support.v4.content.FileProvider"
