"1: Integrate the get all conversation APIs. 2: Integrate the API to close the ticket when the push notification comes and the user opts to close the ticket. "

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,13 @@
             </intent-filter>
         </service>
 
+        <receiver android:name=".fcm.MyFirebaseMessagingService$TicketNotification">
+            <intent-filter>
+                <action android:name="com.tarrakki.ACTION_CLOSE_TICKET" />
+                <action android:name="com.tarrakki.ACTION_CANCEL_CLOSE_TICKET" />
+            </intent-filter>
+        </receiver>
+
         <!--Facebook Details-->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
