--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,13 +90,15 @@ dependencies {
     implementation 'com.williamww:silky-signature:0.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
+
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
     /**Firebase Dependency*/
-    implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.facebook.android:facebook-login:4.41.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
 
 
     testImplementation 'junit:junit:4.12'
