--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,8 @@ dependencies {
     implementation 'com.williamww:silky-signature:0.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
 
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     //implementation 'com.android.support:support-v4:28.0.0'
