--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,17 @@
     <application
         android:name=".App"
         android:allowBackup="false"
-        android:debuggable="true"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:testOnly="false"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,HardcodedDebugMode"
-        tools:replace="android:allowBackup,android:name"
-        tools:targetApi="m">
+        tools:replace="android:allowBackup,android:name,android:appComponentFactory"
+        tools:targetApi="p">
         <activity
             android:name=".module.splash.SplashActivity"
             android:screenOrientation="portrait">
