--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$SUPPORT_LIB_VERSION"
+    implementation "com.android.support:cardview-v7:$SUPPORT_LIB_VERSION"
     implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT"
     implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
-    implementation "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT"
     implementation 'ru.bullyboo.animation:text_counter:1.0.2'
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$LIFECYCLE_VERSION"
@@ -91,6 +91,7 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 
     //implementation 'com.github.smart-fun:XmlToJson:1.4.4'
