--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+        tools:node="merge"
         tools:ignore="GoogleAppIndexingWarning,HardcodedDebugMode"
-        tools:replace="android:allowBackup,android:name,android:appComponentFactory"
+        tools:replace="android:allowBackup,android:name,android:appComponentFactory,android:label"
         tools:targetApi="p">
 
         <activity
@@ -149,6 +150,11 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
     </application>
 
 </manifest>
