--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.otaliastudios:zoomlayout:1.5.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.williamww:silky-signature:0.1.0'
