1 Redeem screen's message and label has been changed. 2 Instead of the click on the green box, can we have the function where if the user clicks anywhere in the entire box implemented. 3 Timer functionality has been implemented for maintenance screen. 4 Fixes issue raised by QA.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".module.maintenance.MaintenanceActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
         <service android:name=".fcm.MyFirebaseMessagingService">
