--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ android {
         abortOnError false
     }
 
+
+
 }
 
 dependencies {
@@ -127,6 +129,14 @@ dependencies {
     implementation('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
         exclude module: 'support-v4'
     }
+
+    // required for all Android apps
+    //implementation 'io.branch.sdk.android:library:3.2.0'
+
+    // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
+    //implementation 'com.google.firebase:firebase-appindexing:19.0.0' // App indexing
+    //implementation 'com.google.android.gms:play-services-ads:16+'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
