1 Added warning message while fund has been block by AMC. 2 Redirected to fund details screen from portfolio screen. 3 Extra decimal point added for Exit Load details.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="tarrakki.app.link" />
+                <data android:scheme="https" android:host="applinks.tarrakki.com" />
                 <!-- example-alternate domain is required for App Links when the Journeys/Web SDK and Deepviews are used inside your website.  -->
                 <data android:scheme="https" android:host="tarrakki-alternate.app.link" />
             </intent-filter>
