1 Added support for Google sign-up for Rural Invest App. 2 Added firebase support for Rural Invest App.

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ buildscript {
 
 project.ext {
 
+    IV = '0123456789012345'
+    AppKey = 'S1D$F#q76S458G9h6u5DF7pk5T7Lpart'
+
+    APPLICATION_RURAL_ID = "com.plutonomic.ruralinvest"
     APPLICATION_ID = "com.tarrakki"
     BUILD_TOOLS_VERSION = "28.0.3"
 
