--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,12 @@ android {
         versionCode VERSION_CODE
         versionName VERSION_NAME
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        resValue 'string', 'key', AppKey
+        resValue 'string', 'iv', IV
     }
     buildTypes {
         release {
-            debuggable false
+            debuggable true
             minifyEnabled MINIFY_ENABLE
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
@@ -87,12 +88,14 @@ android {
         }
         RuralInvest {
             dimension = 'Tarrakki'
-            applicationId = "com.plutonomic.ruralinvest"
+            applicationId = APPLICATION_RURAL_ID
             resValue "string", "app_name", "Rural Invest"
             manifestPlaceholders = [
                     appIcon       : "@mipmap/ic_launcher_rural_invest",
                     appIconRounded: "@mipmap/ic_launcher_round_rural_invest"
             ]
+            /*versionCode = 1
+            versionName = '1'*/
         }
     }
 
