1 Discussed the issue and test case for unit testing of Video KYC with team. 2 Unit Testing for video KYC flow as following scenario   - Tested KYC status of rejection, as of now static due to server dependency.   - Tested KYC status of incomplete, and complete it again by pressing complete button.   - Tested KYC status pending with incomplete of remaining fields and bank details or any of one is pending stage.   - Tested KYC status pending and completed with submission of bank details and remaining field data. 3 Founded some minor bugs and fixes it and improve app stability.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file('C:\\Users\\jayesh\\StudioProjects\\Tarrakki\\keyTarrakki.jks')
+            storeFile file('C:/Users/jayesh/StudioProjects/Tarrakki/key/Tarrakki.jks')
             storePassword 'Tarrakki'
             keyAlias = 'Tarrakki'
             keyPassword 'Tarrakki'
