--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
+
             <!-- Branch URI Scheme -->
             <intent-filter>
 
@@ -161,7 +162,9 @@
                 <action android:name="com.tarrakki.ACTION_CLOSE_TICKET" />
                 <action android:name="com.tarrakki.ACTION_CANCEL_CLOSE_TICKET" />
             </intent-filter>
-        </receiver> <!-- Facebook Details -->
+        </receiver>
+
+        <!-- Facebook Details -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -170,6 +173,7 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -201,6 +205,7 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
+
         <!-- Branch install referrer tracking (optional) -->
         <receiver
             android:name="io.branch.referral.InstallListener"
