--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file('C:/Users/jayesh/StudioProjects/Tarrakki/key/Tarrakki.jks')
+            storeFile file('/home/jayeshparkariya/JAYESH_BACKUP/Projects/Tarrakki/key/Tarrakki.jks')
             storePassword 'Tarrakki'
             keyAlias = 'Tarrakki'
             keyPassword 'Tarrakki'
@@ -32,7 +32,7 @@ android {
     }
     buildTypes {
         release {
-            debuggable false
+            debuggable true
             minifyEnabled MINIFY_ENABLE
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
