--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,12 @@ project.ext {
     TARGET_SDK_VERSION = 28
     MIN_SDK_VERSION = 21
 
-    VERSION_CODE = 14
-    VERSION_NAME = "1.9.4"
+    VERSION_CODE = 17
+    VERSION_NAME = "1.9.7"
+
+    VERSION_CODE_RURAL = 1
+    VERSION_NAME_RURAL = "1.9.7"
+
     //"28.0.0-rc02"
     SUPPORT_LIB_VERSION = "28.0.0"
     CONSTRAINT_LAYOUT = "1.1.3"
