--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file('/home/jayeshparkariya/JAYESH_BACKUP/Projects/Tarrakki/key/Tarrakki.jks')
+            storeFile file('C:/Users/jayesh/StudioProjects/Tarrakki/key/Tarrakki.jks')
             storePassword 'Tarrakki'
             keyAlias = 'Tarrakki'
             keyPassword 'Tarrakki'
