--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 24 14:00:03 IST 2020
-sdk.dir=F\:\\Android\\mybackup\\Android\\sdk
+#Thu Nov 05 11:27:33 IST 2020
+sdk.dir=/home/parth/Parth/Android-SDK/Android-SDK/android-sdk-linux_86
