--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,19 @@ buildscript {
     ext {
         var = '3.6.1'
     }
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url 'https://maven.fabric.io/public' }
+        //maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.2.0' // google-services plugin
+        classpath 'com.google.gms:google-services:4.3.4' // google-services plugin
         // Add dependency
-        classpath 'io.fabric.tools:gradle:1.28.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -31,25 +31,20 @@ project.ext {
     APPLICATION_ID = "com.tarrakki"
     BUILD_TOOLS_VERSION = "28.0.3"
 
-    COMPILE_SDK_VERSION = 28
-    TARGET_SDK_VERSION = 28
+    COMPILE_SDK_VERSION = 29
+    TARGET_SDK_VERSION = 29
     MIN_SDK_VERSION = 21
 
-    VERSION_CODE = 26
-    VERSION_NAME = "1.2.4"
+    VERSION_CODE = 27
+    VERSION_NAME = "1.2.5"
 
-    VERSION_CODE_RURAL = 6
-    VERSION_NAME_RURAL = "1.4"
-
-    //"28.0.0-rc02"
-    SUPPORT_LIB_VERSION = "28.0.0"
-    CONSTRAINT_LAYOUT = "1.1.3"
-    LIFECYCLE_VERSION = "1.1.1"
+    VERSION_CODE_RURAL = 7
+    VERSION_NAME_RURAL = "1.5"
 
     RETROFIT_VERSION = "2.3.0"
     GOOGLE_VERSION = "11.0.4"
     GLIDE_VERSION = "3.7.0"
-    APPCOMPAT = "1.3.0-alpha01"
+    APPCOMPAT = "1.3.0-alpha02"
 
     MINIFY_ENABLE = false
     SHRINK_RESOURCES = false
